Version 2.2.050
    Further improved compatibility with Excellent Enchants

Version 2.2.049
    Combat abilities work with spear in off-hand again (see notes)
    Sweet berry bushes now work with Herbalism (thanks dnocturne)
    Fixed copper items not giving XP for Repair (thanks Remski01)
    Fixed rare edge case where mcMMO could drop items with stack size set outside normal bounds
    Fixed a bug where tamed wolves could cause errors on Folia (thanks Warriorrrr)
    Improved compatibility with Excellent Enchants (fixed error spam from Flame Walker)
    (Codebase) Fixed unit tests when building mcMMO with Java 25 (thanks Warriorrrr)

    NOTES:
    As a semi-permanent work around, mcMMO keeps track of when players swing their weapon, if they have swung it recently enough combat skills will work even if you have a spear in your off-hand.
    Prior to this patch, mcMMO disabled combat abilities when spear was in off-hand to prevent the off-hand spear charge from applying combat abilities from other skills, as mcMMO was unable to determine which item (mainhand vs offhand) caused the damage from the event information alone.

Version 2.2.048
    Fixed error when loading Spears skill manager on older Minecraft versions
    Fixed error when using /spears command on an older Minecraft version

Version 2.2.047
    Fix bug where off-hand spears damage could be attributed to various combat skills and trigger their abilities

    NOTE:
    Sorry guys, noticed this right after pushing 2.2.046, for now melee combat skills won't trigger if you have a spear in your off-hand as a temporary work around to mcMMO being unable to differentiate between main hand and off hand damage.
    I'm working on a more robust solution to this issue, so stay tuned.