@@ -81,7 +81,6 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.VisibleForTesting;
 
 public class McMMOPlayer implements Identified {
-    private static final long NO_SWING = 0L;
     private final @NotNull Identity identity;
 
     //Hacky fix for now, redesign later
@@ -98,7 +97,6 @@ public class McMMOPlayer implements Identified {
     private Party invite;
     private Party allianceInvite;
     private int itemShareModifier;
-    private long lastSwingTimestamp = NO_SWING;
 
     private PartyTeleportRecord ptpRecord;
 
@@ -1281,11 +1279,4 @@ public class McMMOPlayer implements Identified {
         this.chatChannel = chatChannel;
     }
 
-    public long getLastSwingTimestamp() {
-        return lastSwingTimestamp;
-    }
-
-    public void setLastSwingTimestamp(long lastSwingTimestamp) {
-        this.lastSwingTimestamp = lastSwingTimestamp;
-    }
 }
