@@ -1,5 +1,13 @@
 Version 2.2.050
-    Further improved compatibility with Excellent Enchants
+    Minimum supported Minecraft version raised to 1.20.4 (see notes)
+    Improved Spears damage detection (see notes)
+    Spear abilities can now trigger from off-hand attacks with the Spear
+    Further improved compatibility with Excellent Enchants (fixed more errors)
+
+    NOTES:
+    From 2.2.050 onwards, mcMMO will require Minecraft versions 1.20.4 or newer.
+    Every now and then I raise the minimum supported Minecraft version to reduce maintenance burden of supporting older versions.
+    mcMMO no longer monitors PlayerAnimationEvent, it turns out Spigot has a DamageType just for Spear damage, avoiding the need to track player arm swings.
 
 Version 2.2.049
     Combat abilities work with spear in off-hand again (see notes)
